tests/parser/invalid/return_outside_function.src
return 42;  // Ошибка: return вне функции